@@ -461,6 +461,7 @@ LINK node06240-node06247
 LINK aaa1
     NODES centre:E90 c3
     OUTLINECOLOR 0 0 0
+    TARGET c:/xampp/htdocs/cacti/rra/testing.rrd
     BWLABEL none
     
 LINK aaa2
