@@ -10,13 +10,18 @@ HEIGHT 600
 HTMLOUTPUTFILE weathermap.html
 IMAGEOUTPUTFILE weathermap.png
 
+NODE template1
+	LABEL TEMPLATE
+
 NODE node1
 	POSITION 200 200
-        LABEL node1
+    LABEL node1
+    TEMPLATE template1
 	
 NODE node2
+	TEMPLATE template1
 	POSITION 500 200
-        LABEL node2
+    LABEL node2
 
 LINK firstlink
 	NODES node1 node2
